fixed the align

--- a/style.css
+++ b/style.css
@@ -6,6 +6,17 @@
 }
 
 
+a:visited {
+    text-decoration: none;
+}
+
+
+
+a {
+    color: red;
+    text-decoration: none;
+}
+
 @font-face {
     font-family: CustomFont;
     src: url("ferrum.otf") format("opentype");
@@ -194,4 +205,58 @@ p{
 	width: var(--social-media-circle);
 	height: var(--social-media-circle); 
 	/* width and height can be anything, as long as they're equal */
+}
+
+.utilityBar{
+
+	margin-top: 0.7em;
+	background-color: #C9C9C9;
+	width: 100%;
+	height: 3em;
+	vertical-align: center;
+
+}
+.userName{
+
+	display: inline-block;
+	float:right;
+	margin-right: 3em;
+
+}
+
+.footer{
+
+	text-align: center;
+	display: inline-block;
+	float: bottom;
+}
+
+.inlineBlock{
+	display: inline-block;
+	width: 55%;
+	display: block;
+	float: right;
+	margin-top: 1em;
+}
+
+.circleBase {
+
+	display: inline-block;
+    border-radius: 50%;
+    behavior: url(PIE.htc); /* remove if you don't care about IE8 */
+    height: 90%;
+    background: black;
+    content: url('photo.jpg');
+    margin-left: 10%;
+    margin-top: 0.5%;
+    vertical-align: center;
+}
+
+
+.bloggingTools{
+
+	display: inline-block;
+	text-align: left;
+	position: relative;
+	width: 60%;
 }
